fixed feature and finalised about page

--- a/index.html
+++ b/index.html
@@ -19,64 +19,64 @@
 
 <div id="container">
 <article id="article"><h2 id="title">ABOUT</h2>
-<p id="writing">I have enjoyed every step of the application process to apply for the course at Founders
-   and Coders. I have learnt and developed my skill set along the way. It's been very exciting to learn and 
-   grow and to feel like this can be more a realistic opportunity. My inspiration to apply for the course
-    was based on the recommendations of a friend who studied at Founders and Coders. I believe it's an
-     incredible opportunity which should be a life changing experience for me and my other peers. I am 
-     excited to work with like-minded individuals, so we can learn from each other. It's highly motivating 
-     to see a coding course combine social issues with the tech industry. Personally, the opportunity to 
-     study on the course not only means a chance for a career change but also a way to make a positive impact 
-     within a dynamic, creative, and ethical environment. The curriculum looks well thought out and thorough 
-     and I can see it has received such high praise.</p>
-<p id="writing2">I am extremely encouraged by your goal to make the tech industry more diverse, 
-  inclusive and collaborative. I have looked at several other courses and the main selling point that they all 
-  highlight is the potential salary however I believe there are more important things in life. I view tech
-   as the most important industry in shaping the future of society and how we relate to work, the world, and 
-   each other. For an industry that is supposedly being led by the most progressive generation in history, it 
-   is deeply disheartening to watch it fall into familiar patterns. </p>
-   <p id="writing3">Although I am a white male, I have
-   worked several gig economy jobs and have been disappointed (although not surprised) that the contractor/workers
-    are representative of the culturally diverse London I grew up in, whereas those further up the hierarchy are almost all people who look like me.
-I grew up in a forward thinking, political household and was attending protests from when I was a child. I studied politics at
-     university because I wanted to educate myself enough on these issues to make sure I was on the right side of
-      history so I could be a part of the solution and not part of the problem. The more I learned, the more
-      I learned there was to do in using my position of privilege to support those without it.
+<p id="writing">
+  I have enjoyed every step of the application process to apply for the course at Founders and Coders. 
+  I have learnt and developed my skill set along the way. It's been very exciting to learn and grow and to feel like 
+  this can be more a realistic opportunity. My inspiration to apply for the course was based on the recommendations
+   of a friend who studied at Founders and Coders. I believe it's an incredible opportunity which should be a life-changing
+    experience for me and my other peers. I am excited to work with like-minded individuals, so we can learn from each other. </p>
+<p id="writing2">
+  It's highly motivating to see a coding course combine social issues with the tech industry. Personally,
+   the opportunity to study on the course not only means a chance for a career change but also a way to make a positive 
+   impact within a dynamic, creative, and ethical environment. The curriculum looks well thought out and thorough and I 
+   can see it has received such high praise. I am extremely encouraged by your goal to make the tech industry more diverse,
+    inclusive, and collaborative. I have looked at several other courses and the main selling point that they all highlight
+     is the potential salary however I believe there are more important things in life.  </p>
+   <p id="writing3">
+     I view tech as the most important industry in shaping the future of society and how we relate to work,
+      the world, and each other. For an industry that is supposedly being led by the most progressive generation in history, 
+      it is deeply disheartening to watch it fall into familiar patterns. Although I am a white male, I have worked several 
+      gig-economy jobs and have been disappointed (although not surprised) that the contractor/workers are representative
+       of the culturally diverse London I grew up in, whereas those further up the hierarchy are almost all people who look like me. 
 </p>
 
   <p id="writing4">
-Although there is always more to learn, I have tried to embark on the lifelong journey of being a good ally.
-Through attending the BLM protests and having conversations with friends in their wake, I learned a lot
- about the structural issues still facing so many people today. Discussions with friends during the Me Too
-  movement were very enlightening. Growing up with an feminist, activist, lesbian mother, an awareness of
-   women’s issues played a major role in the formation of my sense of morality, but it took people speaking
-    up about their personal experience for me to realise just how pervasive these issues are.</p>
-    <p id="writing5"> I think it’s
-     excellent that you are encouraging people to educate themselves about these issues and I plan to 
-     incorporate these lessons into all my future work. 
-I have learned that what it takes to be a good ally is listening, helping to build power in disadvantaged
-        communities, and playing a supporting role, rather than trying to use my own power to solve problems for others.
-</p>
+    I grew up in a forward thinking, political household and was attending protests from when I was a child. I studied
+     politics at university because I wanted to educate myself enough on these issues to make sure I was on the right side
+      of history so I could be a part of the solution and not part of the problem. The more I learned, the more I
+       learned there was to do in using my position of privilege to support those without it. Although there is always
+        more to learn, I have tried to embark on the lifelong journey of being a good ally. </p>
+    <p id="writing5">
+      Through attending the BLM protests and having conversations with friends in their wake,
+       I learned a lot about the structural issues still facing so many people today. Discussions with friends
+        during the Me Too movement were very enlightening. Growing up with a feminist, activist, lesbian mother,
+         an awareness of women’s issues played a major role in the formation of my sense of morality, but it took
+          people speaking up about their personal experience for me to realise just how pervasive these issues are.
+           I think it’s excellent that you are encouraging people to educate themselves about these issues and
+            I plan to incorporate these lessons into all my future work. </p>
 <p id="writing6">
-   Technology has the power to isolate us but also the power to bring us together. One of the reasons that I
-    want to learn to code is to pursue my idea for a platform which will be a place for cooperatively run,
-     ethical businesses to find each other, make business connections, and trade.  I would include an 
-     area for supporters, customers, and other community groups to get involved, as well as areas for 
-     organising in support of each other and fundraising for mutual assistance. </p>
-       <p id="writing7">It could be used to organise food/necessities distribution, help in the wake of disasters,
-      or shelter for the unhoused as some examples. As well as this, disadvantaged groups can use it to 
-      crowdsource funds as well as physical help to start new businesses and organisations that can give
-       back and elevate the community. Crucially, it will be done in a way that encourages reciprocal 
-       relationships and community sharing and strengthening rather than simply charity.</p>
-       <p id="writing8">  This will help forge
-      connections between groups of people who have experience taking an active role in decision making
-       in their lives and building strength. The platform itself would be run as
-        a cooperative, which would involve me ceding control and personal gain to work towards a better 
-        outcome for all.
-      
-      It would be a privilege to start my journey into coding with a course that takes these matters 
-      seriously and be among a collection of like-minded people so we can share ideas about how to 
-      improve the teach industry and make the world a better place.</p>
+  I have learned that what it takes to be a good ally is listening, helping to build power in disadvantaged
+   communities, and playing a supporting role, rather than trying to use my own power to solve problems for
+    others. Technology has the power to isolate us but also the power to bring us together. One of the reasons
+     that I want to learn to code is to pursue my idea for a platform which will be a place for cooperatively 
+     run, ethical businesses to find each other, make business connections, and trade.  
+</p>
+       <p id="writing7">
+         it would include an area for supporters, customers, and other community groups to get involved,
+          as well as areas for organising in support of each other and fundraising for mutual assistance.
+           It could be used to organise food/necessities distribution, help in the wake of disasters, or
+            shelter for the unhoused as some examples. As well as this, disadvantaged groups can use it 
+            to crowdsource funds as well as physical help to start new businesses and organisations that
+             can give back and elevate the community. Crucially, it will be done in a way that encourages
+              reciprocal relationships and community sharing and strengthening rather than simply charity.
+             </p>
+       <p id="writing8">This will help forge connections between groups of people who have experience
+          taking an active role in decision making in their lives and building strength. The platform
+           itself would be run as a cooperative, which would involve me ceding control and personal gain
+            to work towards a better outcome for all.<br><br>It would be a privilege to start my journey into coding
+             with a course that takes these matters seriously and be among a collection of like-minded
+              people so we can share ideas about how to improve the teach industry and make the world a
+               better place.</p>
      
 </article>
 <div id="clicker">
