added animations to all deck functions

--- a/feature.html
+++ b/feature.html
@@ -39,9 +39,9 @@
         <button onclick="removeSuit('spades')" class="options">Remove Spades</button>
         <button onclick="removeSuit('diamonds')" class="options">Remove Diamonds</button>
         <button onclick="removeSuit('hearts')" class="options">Remove Hearts</button>
-        <button onclick="retrieveLastCard()" class="options">Retrieve Last Card</button>
-        <button onclick="retrieveBottomCard()" class="options">Retrieve Bottom Card</button>
-        <button onclick="retrieveRandomCard()" class="options">Retrieve Random Card</button>
+        <button onclick="takeInLast()" class="options">Retrieve Last Card</button>
+        <button onclick="takeInBottom()" class="options">Retrieve Bottom Card</button>
+        <button onclick="takeInRandom()" class="options">Retrieve Random Card</button>
         <button onclick="retrieveSuit('clubs')" class="options">Retrieve Clubs</button>
         <button onclick="retrieveSuit('spades')" class="options">Retrieve Spades</button>
         <button onclick="retrieveSuit('diamonds')" class="options">Retrieve Diamonds</button>
