last minute fixes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </div>
 <br>
 <footer>
-<p>freeCodeCamp profile: <a href="https://www.freecodecamp.org/KesterJJ" target="_blank" style="text-decoration: underline;">https://www.freecodecamp.org/KesterJJ</a> - - - Github repository: <a href="https://github.com/KesterJJ/application-site" target="_blank" style="text-decoration: underline;">https://github.com/KesterJJ/application-site</a></p>
+<p>freeCodeCamp profile: <a href="https://www.freecodecamp.org/KesterJJ" target="_blank" style="text-decoration: underline;">https://www.freecodecamp.org/KesterJJ</a> <br>Github repository: <a href="https://github.com/KesterJJ/application-site" target="_blank" style="text-decoration: underline;">https://github.com/KesterJJ/application-site</a></p>
 </footer>
 </div>
 
