--- a/project-gallery.html
+++ b/project-gallery.html
@@ -18,7 +18,7 @@
 <br>
 <h2 id="title">PROJECT GALLERY</h2>
 <p id="writing">Click on the images to interact with the projects! <br><br>
-Please note: The tip calculator and lolcat clock were previous practice projects of mine so I was emulating websites that already exist, although the code is all my own (except for the code to import the font for the lolcat clock). The band website is an ongoing project, hence why the member bios and some pages are empty. The code is all mine other than the code used to create the background texture and import the soundcloud elements. </p>
+Please note: The tip calculator and lolcat clock were previous practice projects of mine so I was emulating websites that already exist, although the code is all my own (except for the code to import the font for the lolcat clock). The band website is an ongoing project, hence why the member bios and some pages are empty. The code is all mine other than the code used to create the background texture, import the soundcloud elements and add the social media buttons in the footer. </p>
 <br>
 <div id="container">
     <figure id="passwordCreator">
